fixed z-indexes issue, and moved some objects to different layers to improve contrast

--- a/styles/style.css
+++ b/styles/style.css
@@ -88,17 +88,7 @@ fieldset {
 
 }
 
-.canvas_01 {
-  z-index: 10;
-}
 
-.canvas_02 {
-  z-index: 8;
-}
-
-.canvas_03 {
-  z-index: 6;
-}
 
 .scene_a .canvas {
   cursor : url('../assets/cursors/cursor_a.png'), auto;
@@ -123,6 +113,8 @@ fieldset {
   transition: opacity 1s;
 }
 
+
+
 /* END OF CANVASES */
 
 
@@ -146,17 +138,7 @@ fieldset {
   "c13 c14 c15 c16"
 }
 
-.objects_01 {
-  z-index: 9;
-}
 
-.objects_02 {
-  z-index: 7;
-}
-
-.objects_03 {
-  z-index: 5;
-}
 
 .item {
   filter: var(--shadow);
@@ -194,7 +176,6 @@ fieldset {
   right: 0;
   top: 100vh;
   padding: 10px;
-  /* background: rgba(240,240,240, 0.4); */
   z-index: 20;
   display: grid;
   grid-template-columns: minmax(100px, 1fr);
@@ -212,7 +193,6 @@ fieldset {
   right: 0;
   width: 100%;
   background: rgba(10,10,10,0.75);
-  z-index: 30;
   justify-content: center;
   align-items: center;
 }
@@ -283,3 +263,130 @@ fieldset {
     filter: drop-shadow(4px 4px 4px yellow) var(--shadow);
   }
 /* END OF REALM BUTTONS */
+
+
+
+/* Z-INDEXES */
+.modal {
+  z-index: 100;
+}
+
+/* Layer 1 */
+.canvas_01 {
+  z-index: 39;
+}
+.objects_01 {
+  z-index: 38;
+}
+
+/* Layer 2 */
+.canvas_02 {
+  z-index: 37;
+}
+.objects_02 {
+  z-index: 36;
+}
+
+/* Layer 3 */
+.canvas_03 {
+  z-index: 35;
+}
+.objects_03 {
+  z-index: 34;
+}
+
+/* Layer 4 */
+.canvas_04 {
+  z-index: 33;
+}
+.objects_04 {
+  z-index:32;
+}
+
+/* Layer 5 */
+.canvas_05 {
+  z-index: 31;
+}
+.objects_05 {
+  z-index: 30;
+}
+
+/* Layer 6 */
+.canvas_06 {
+  z-index: 29;
+}
+.objects_06 {
+  z-index: 28;
+}
+
+/* Layer 7 */
+.canvas_07 {
+  z-index: 27;
+}
+.objects_07 {
+  z-index: 26;
+}
+
+/* Layer 8 */
+.canvas_08 {
+  z-index: 25;
+}
+.objects_08 {
+  z-index: 24;
+}
+
+/* Layer 9 */
+.canvas_09 {
+  z-index: 23;
+}
+.objects_09 {
+  z-index: 22;
+}
+
+/* Layer 10 */
+.canvas_10 {
+  z-index: 21;
+}
+.objects_10 {
+  z-index: 20;
+}
+
+/* Layer 11 */
+.canvas_11 {
+  z-index: 19;
+}
+.objects_11 {
+  z-index: 18;
+}
+
+/* Layer 12 */
+.canvas_12 {
+  z-index: 17;
+}
+.objects_12 {
+  z-index: 16;
+}
+
+/* Layer 13 */
+.canvas_13 {
+  z-index: 15;
+}
+.objects_13 {
+  z-index: 14;
+}
+
+/* Layer 14 */
+.canvas_14 {
+  z-index: 13;
+}
+.objects_14 {
+  z-index: 12;
+}
+
+/* Layer 15 */
+.canvas_15 {
+  z-index: 11;
+}
+.objects_15 {
+  z-index: 10;
+}
